--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,14 +53,22 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:$retofitVersion"
     implementation "androidx.core:core-ktx:1.3.2"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
-
-
-
-
     def fragment_ktx = "1.2.5"
     implementation "androidx.fragment:fragment-ktx:$fragment_ktx"
-
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
+
+    //testing
+    testImplementation("com.squareup.okhttp3:mockwebserver:4.7.2")
+    //for unit testing
+    testImplementation 'junit:junit:4.12'
+    testImplementation "org.mockito:mockito-core:3.3.3"
+    testImplementation 'androidx.arch.core:core-testing:2.1.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    testImplementation 'org.json:json:20180813'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.0-M1'
+    testImplementation "org.mockito.kotlin:mockito-kotlin:3.0.0"
+
+
 
 
 
